[package]
name = "terrafirma-scraper"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
scraper = "0.11.0"
serde_derive = "1.0.102"
wee_alloc = "0.4.5"
serde_json = "1.0.41"
serde = "1.0.102"
http_guest = { git = "https://github.com/MarcoPolo/terrafirma-rust-guest" }
url = "2.1.0"
http = "0.1.19"
